--- a/Group22Assignment2.tex
+++ b/Group22Assignment2.tex
@@ -759,7 +759,7 @@ Then we have our register where we create an array that save it
 our register we constructed makes it possible to write and read data, and save it to a register if we wanted to. so it has 5 inputs, 2 values, 1 its need to be written, 1 where it need to be written, and 1 is the specific data that need to be written.
 \section{Test and analysis}
 \emph{Report here the results from the test you have carried out. Present the test you have developed (if any). Remember to discuss the results and the test you have carried out, do not just present them, but explain and argue their meaning. Address the design evaluation questions listed in Task 11 in the Assignment 2 document.}\newline
-Our erosion step has branches that allow it to execute the full process on an image with more or less cycles depending on the original image, therefore each pixel or step takes between 7 cycles and 21 cycles. From our test-runs the full 20x20 image takes about 6815 cycles, leaving the program with an average cycle requirement per pixel with all the processing of: 17.03. That means a 64MHz CPU would perform a step in 265 nanoseconds, a 500MHz in 34 nanoseconds, 1GHz in 18ns, 2GHz in 9ns. Although depending on the memory it is reading from, it might not be able to complete the step that fast, due to common RAM taking usually around 20-50ns just to read from. Since our code needs to load from ram and then calculate on the same 6 registers, while using the other registers to reference from, the program would not benefit from a very fast clock cycle, and in the end become very dependant on memory load speed for its total time required to run. Scaling this concept up, on the emulated CPU which ran at 2761Hz it completed 400 pixels in 2.9 seconds and printed it out, for a 950x950 image like in assignment 1, it is reasonable to assume that would take 87,7 minutes with the same CPU setup. Assignment 1 on the same computer took 201ms to complete the same task of loading the image (although a bit more complex due to needing to grey scale) and then erode once. Although this is an unfair comparison, due to Assignment 1 ran directly on the windows machine with an executable file compiled by GCC, which is quite competent in optimising code into assembly. Thusly it was able to load and calculate the pixels at full speed and a higher Hz than the emulated CPU was capable of.
+Our erosion step has branches that allow it to execute the full process on an image with more or less cycles depending on the original image, therefore each pixel or step takes between 7 cycles and 21 cycles. From our test-runs the full 20x20 image takes about 6815 cycles, leaving the program with an average cycle requirement per pixel with all the processing of: 17.03. That means a 64MHz CPU would perform a step in 265 nanoseconds, a 500MHz in 34 nanoseconds, 1GHz in 18ns, 2GHz in 9ns. Although depending on the memory it is reading from, it might not be able to complete the step that fast, due to common RAM taking usually around 20-50ns just to read from. Since our code needs to load from ram and then calculate on the same 6 registers, while using the other registers to reference from, the program would not benefit from a very fast clock cycle, and in the end become very dependant on memory load speed for its total time required to run. Scaling this concept up, on the emulated CPU which ran at 2761Hz it completed 400 pixels in 2.9 seconds and printed it out, for a 950x950 image like in assignment 1, it is reasonable to assume that would take 87,7 minutes with the same CPU setup. Assignment 1 on the same computer took 201ms to complete the same task of loading the image (although a bit more complex due to needing to grey scale) and then erode once. Although this is an unfair comparison, due to Assignment 1 ran directly on the windows machine with an executable file compiled by GCC, which is quite competent in optimising code into assembly, easily beating our own made assembly code. Thusly it was able to load and calculate the pixels at full speed and a higher Hz than the emulated CPU was capable of.
 % \section{References}
 % \begin{thebibliography}{1}
 %     \bibitem{arduino}
